Project.FrontEnd/src/app/Page-components/welcome-page/welcome-page.css
/* =================================== */
/* Global Styles */
/* =================================== */
.main-container {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  width: 100%;
  min-width: 100%;
  padding-top: 5rem;
  background-color: var(--background-color);
}


/* =================================== */
/* SECTION 1 */
/* =================================== */
.section1 {
  position: relative;
  width: 100%;
  height: 75vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.left-section1 { 
  width: 51%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  background-color: var(--black-color);
  color: var(--white-color);
  gap: 1rem;
  padding: 0% 0% 12% 4%;
}

.left-section1 h1 {
  font-size: clamp(1rem, 8vw, 3rem);
  margin-bottom: 1rem;
  font-weight: 700;
}

.left-section1 p {
  font-size: clamp(1rem, 2vw, 1.2rem);
  font-weight: 600;
}

.sub-heading {
  font-size: clamp(1.2rem, 3vw, 1.5rem);
  margin-bottom: 2rem;
}

.footer-left-section {
  margin-top: 2rem;
}

.right-section1 {
  width: 49%;
  height: 100%;
  position: relative;
  z-index: 1;
}

.right-section1 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.left-shadow-edge {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  background: linear-gradient(to right,
      rgba(var(--black-color-2), 0.999) 0%,
      rgba(var(--black-color-2), 0.99) 2%,
      rgba(var(--black-color-2), 0.9) 3%,
      rgba(var(--black-color-2), 0.9) 6%,
      rgba(var(--black-color-2), 0.7) 10%,
      rgba(var(--black-color-2), 0) 20%,
      rgba(var(--black-color-2), 0) 40%,
      rgba(var(--black-color-2), 0) 70%,
      rgba(var(--black-color-2), 0) 100%);
  pointer-events: none;
  z-index: 2;
}


/* =================================== */
/* SECTION 2 */
/* =================================== */
.section2 {
  position: relative;
  width: 100%;
  height: 75vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.left-section2 {
  width: 49%;
  height: 100%;
  position: relative;
  z-index: 1;
}

.left-section2 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.right-section2 {
  width: 51%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  background-color: var(--black-color);
  color: var(--white-color);
  gap: 1rem;
  padding: 0% 0% 12% 3%;
}


.right-section2 h1 {
  font-size: clamp(0.5rem, 6vw, 2rem);
  margin-bottom: 1rem;
  font-weight: 700;
}

.right-section2 .sub-heading {
  font-size: clamp(1rem, 2.5vw, 1.3rem);
  margin-bottom: 2rem;
  font-weight: 600;
}

.right-shadow-edge {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background: linear-gradient(to left,
      rgba(var(--black-color-2), 0.999) 0%,
      rgba(var(--black-color-2), 0.99) 2%,
      rgba(var(--black-color-2), 0.9) 3%,
      rgba(var(--black-color-2), 0.9) 6%,
      rgba(var(--black-color-2), 0.7) 10%,
      rgba(var(--black-color-2), 0) 20%,
      rgba(var(--black-color-2), 0) 40%,
      rgba(var(--black-color-2), 0) 70%,
      rgba(var(--black-color-2), 0) 100%);
  pointer-events: none;
  z-index: 2;
}

/* =================================== */
/* SECTION 3 */
/* =================================== */
.section3 {
  width: 100%;
  height: 75vh;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  background-color: var(--background-color);
  padding: 3% 5%;
  /* Optional spacing */
  gap: 2%;
  flex-wrap: nowrap;
  /* force inline row layout */
}

.first-image,
.second-image,
.third-image {
  width: 28%;
  height: 100%;
  color: var(--white-color);
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  box-sizing: border-box;
}

.first-image img,
.second-image img,
.third-image img {
  width: 100%;
  /* scales image with parent div */
  max-width: 300px;
  /* original max size */
  height: auto;
  object-fit: contain;
}

.first-image h2,
.second-image h2,
.third-image h2 {
  padding: 10% 0;
  font-size: clamp(1rem, 3vw, 1.5rem);
  font-weight: 800;
}

.first-image p,
.second-image p,
.third-image p {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: clamp(0.5rem, 6vw, 1.2rem);
  font-weight: bold;
  text-align: left;
}

/* =================================== */
/* SECTION 4 */
/* =================================== */
.section4 {
  position: relative;
  width: 100%;
  height: 75vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.left-section4 {
  width: 51%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  background-color: var(--black-color);
  color: var(--white-color);
  gap: 1rem;
  padding: 0% 0% 12% 4%;
}

.left-section4 h1 {
  font-size: clamp(1rem, 8vw, 3rem);
  margin-bottom: 1rem;
  font-weight: 700;
}

.left-section4 p {
  font-size: clamp(1rem, 2vw, 1.2rem);
  font-weight: 600;
}

.sub-heading4 {
  font-size: clamp(1.2rem, 3vw, 1.5rem);
  margin-bottom: 2rem;
}

.right-section4 {
  width: 49%;
  height: 100%;
  position: relative;
  z-index: 1;
}

.right-section4 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.left-shadow-edge4 {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  background: linear-gradient(to right,
      rgba(var(--black-color-2), 0.999) 0%,
      rgba(var(--black-color-2), 0.99) 2%,
      rgba(var(--black-color-2), 0.9) 3%,
      rgba(var(--black-color-2), 0.9) 6%,
      rgba(var(--black-color-2), 0.7) 10%,
      rgba(var(--black-color-2), 0) 20%,
      rgba(var(--black-color-2), 0) 40%,
      rgba(var(--black-color-2), 0) 70%,
      rgba(var(--black-color-2), 0) 100%);
  pointer-events: none;
  z-index: 2;
}


/* =================================== */
/* Common Elements */
/* =================================== */
.common-button {
  width: clamp(10rem, 30%, 16rem);
  height: clamp(2.5rem, 8vw, 4rem)!important;
  border-radius: 8px;
  font-size: clamp(0.5rem, 2vw, 1.2rem);
  font-weight: 600;
  background-color: var(--white-color);
  color:var(--black-color);
  border: none;
  cursor: pointer;
  transition: all 0.3s ease;
  display: flex;
  align-items: center;
  justify-content: center;
}
.or{
  width: clamp(8rem, 30%, 16rem);
  font-size: clamp(0.5rem, 2vw, 1.2rem);
  display: flex;
  align-items: center;
  justify-content: center;
}

.common-button:hover {
  transform: scale(1.05);
  background-color: var(--text-color);
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

/* Responsive stacking order for smaller screens */
@media (max-width: 768px) {
  /* Section 1: image above text */
  .section1 {
    flex-direction: column-reverse;
    height: auto;
  }
  .left-section1,
  .right-section1 {
    width: 100%;
    height: auto;
  }

  /* Section 2: image above text */
  .section2 {
    flex-direction: column;
    height: auto;
  }
  .left-section2,
  .right-section2 {
    width: 100%;
    height: auto;
  }

  /* Section 4: text above image */
  .section4 {
    flex-direction: column;
    height: auto;
  }
  .left-section4,
  .right-section4 {
    width: 100%;
    height: auto;
  }

  /* Section 3: make cards stack if needed */
  .section3 {
    flex-direction: column;
    align-items: center;
    height: auto;
  }
  .first-image,
  .second-image,
  .third-image {
    width: 100%;
    max-width: 300px;
  }
  
  .common-button {
    width: 95%;
    font-size: clamp(1rem, 4vw, 1.4rem);
    height: clamp(3rem, 10vw, 4rem) !important;
  }

  .or{
    width: 95%;
    font-size: clamp(1rem, 4vw, 1.4rem);
  }
}

